--- a/fastapp/requirements.txt
+++ b/fastapp/requirements.txt
@@ -1,6 +1,8 @@
 a2wsgi==1.10.10
+aioredis==1.3.1
 aiosqlite==0.21.0
 alembic==1.16.5
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.10.0
 apache-airflow==3.0.6
@@ -14,14 +16,23 @@ apache-airflow-task-sdk==1.0.6
 APScheduler==3.11.0
 argcomplete==3.6.2
 asgiref==3.9.1
+async-timeout==5.0.1
 attrs==25.3.0
 bcrypt==4.3.0
+billiard==4.2.3
 blinker==1.9.0
+boto3==1.41.4
+botocore==1.41.4
+build==1.3.0
 cadwyn==5.4.4
+celery==5.5.3
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
 click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 colorama==0.4.6
 colorlog==6.9.0
 cron_descriptor==2.0.6
@@ -33,7 +44,6 @@ dnspython==2.7.0
 ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.116.1
-fastapi-cache==0.1.0
 fastapi-cache2==0.2.2
 fastapi-cli==0.0.11
 fastapi-cloud-cli==0.1.5
@@ -44,15 +54,19 @@ greenlet==3.2.4
 grpcio==1.74.0
 gunicorn==23.0.0
 h11==0.16.0
+hiredis==3.3.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 importlib_metadata==8.7.0
+iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+kombu==5.5.4
 lazy-object-proxy==1.12.0
 libcst==1.8.4
 linkify-it-py==2.0.3
@@ -80,15 +94,19 @@ passlib==1.7.4
 pathspec==0.12.1
 pendulum==3.1.0
 pluggy==1.6.0
+prompt_toolkit==3.0.52
 protobuf==6.32.0
 psutil==7.0.0
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
+pydantic-settings==2.12.0
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
 pymongo==4.14.1
+pyproject_hooks==1.2.0
+pytest==9.0.2
 python-daemon==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
@@ -98,6 +116,7 @@ python-slugify==8.0.4
 pytz==2025.2
 PyYAML==6.0.2
 PyYAML-ft==8.0.0
+redis==5.2.1
 referencing==0.36.2
 requests==2.32.5
 retryhttp==1.3.3
@@ -107,6 +126,7 @@ rich-toolkit==0.15.1
 rignore==0.6.4
 rpds-py==0.27.1
 rsa==4.9.1
+s3transfer==0.15.0
 sentry-sdk==2.37.1
 setproctitle==1.3.7
 shellingham==1.5.4
@@ -134,7 +154,9 @@ universal_pathlib==0.2.6
 urllib3==2.5.0
 uuid6==2025.0.1
 uvicorn==0.35.0
+vine==5.1.0
 watchfiles==1.1.0
+wcwidth==0.2.14
 websockets==15.0.1
 Werkzeug==3.1.3
 wirerope==1.0.0
