--- a/fastapp/Jenkinsfile
+++ b/fastapp/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
 
         stage('Checkout Code') {
             steps {
-                git branch: 'main',
+                git branch: 'master',
                     url: 'https://github.com/sharathpalankar/Fastapi-auth.git'
             }
         }
