--- a/fastapp/Jenkinsfile
+++ b/fastapp/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
             }
         }
 
-        stage('Setup Python') {
+        stage('Setup Python fastapi app') {
             steps {
                 sh '''
                 python3 --version
