--- a/fastapp/requirements.txt
+++ b/fastapp/requirements.txt
@@ -5,14 +5,14 @@ alembic==1.16.5
 amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.10.0
-apache-airflow==3.0.6
-apache-airflow-core==3.0.6
-apache-airflow-providers-common-compat==1.7.3
-apache-airflow-providers-common-io==1.6.2
-apache-airflow-providers-common-sql==1.28.0
-apache-airflow-providers-smtp==2.2.1
-apache-airflow-providers-standard==1.7.0
-apache-airflow-task-sdk==1.0.6
+# apache-airflow==3.0.6
+# apache-airflow-core==3.0.6
+# apache-airflow-providers-common-compat==1.7.3
+# apache-airflow-providers-common-io==1.6.2
+# apache-airflow-providers-common-sql==1.28.0
+# apache-airflow-providers-smtp==2.2.1
+# apache-airflow-providers-standard==1.7.0
+# apache-airflow-task-sdk==1.0.6
 APScheduler==3.11.0
 argcomplete==3.6.2
 asgiref==3.9.1
@@ -114,8 +114,8 @@ python-jose==3.5.0
 python-multipart==0.0.20
 python-slugify==8.0.4
 pytz==2025.2
-PyYAML==6.0.2
-PyYAML-ft==8.0.0
+# PyYAML==6.0.2
+# PyYAML-ft==8.0.0
 redis==5.2.1
 referencing==0.36.2
 requests==2.32.5
