--- a/requirements.txt
+++ b/requirements.txt
@@ -114,8 +114,8 @@ python-jose==3.5.0
 python-multipart==0.0.20
 python-slugify==8.0.4
 pytz==2025.2
-PyYAML==6.0.2
-PyYAML-ft==8.0.0
+# PyYAML==6.0.2
+# PyYAML-ft==8.0.0
 redis==5.2.1
 referencing==0.36.2
 requests==2.32.5
